# HackOn

./: .dockerignore  Dockerfile  Hybrid_search  README.md  apprunner.yaml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  catalog.json  docker-compose.yml  index.js  main.py  mkdocs.yml  package.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_commerce.py  0002_ai_and_missions.py  0003_reviews_notifications.py  0004_catalog_local.py  842c96b95eed_add_user_preferences_table.py
backend/app/: __init__.py  cli.py  main.py
backend/app/ai/: __init__.py  embedding.py  llm.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  errors.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py  supabase.py
backend/app/models/: __init__.py  address.py  base.py  cart.py  delivery.py  mission.py  notification.py  order.py  payment.py  product.py  reorder.py  review.py  user_preference.py
backend/app/repositories/: __init__.py  address.py  ai.py  cart.py  notification.py  order.py  product.py  review.py
backend/app/schemas/: address.py  ai.py  auth.py  cart.py  common.py  delivery.py  mission.py  notification.py  order.py  payment.py  product.py  query_parser.py  recommendation.py  reorder.py  review.py  (+1 more)
backend/docs/: ai-module.md  architecture.md  deployment.md  domain-model.md  getting-started.md  index.md  local-setup.md  realtime.md
backend/scratch/: get_categories.py  test_cart_from_intent.py  test_parse_query.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_delivery_slots.py  test_dev_bypass.py  test_embedding_smoke.py  test_events.py  test_intent_to_cart.py  test_llm_gemma.py  test_llm_stub.py  test_order_state_machine.py  test_promos.py  test_reorders.py  test_review_schemas.py  test_security.py
(+88 files in other folders)
