[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qcommerce-backend"
version = "0.1.0"
description = "Quick-commerce FastAPI backend with AI-first Intent-to-Cart"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Quick-Commerce Hackathon Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # Database (async)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Supabase (auth + storage clients)
    "supabase>=2.9.0",
    "PyJWT[crypto]>=2.9.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",

    # Scheduler for background jobs (smart reorders, stats)
    "APScheduler>=3.10.4",

    # Redis: pub/sub fan-out for WebSockets + rate limiting + cache
    "redis>=5.2.0",
]

[project.optional-dependencies]
ai = [
    # Phase 3: local embedding model (matches the one used to populate the DB)
    "sentence-transformers>=3.3.0",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.scripts]
qcommerce = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
